--- a/ergogen/config.yaml
+++ b/ergogen/config.yaml
@@ -331,31 +331,6 @@ pcbs:
           VCC: VCC
           GND: GND
           CS: CS
-
-      # reset-left: # todo change
-      #   what: b3u1000p
-      #   where:
-      #     - ref: finger-zone_inner_home
-      #       shift: [key_width + mcu_padding_width, -30.5]
-      #       rotate: 180
-      #   nets:
-      #     r1: RST
-      #     r2: GND
-      #   params:
-      #     reverse: true
-          
-
-      # reset-right: # todo change
-      #   what: b3u1000p
-      #   where:
-      #     - ref: mirror_finger-zone_inner_home
-      #       shift: [key_width + mcu_padding_width, -30.5]
-      #       rotate: 180
-      #   nets:
-      #     r1: RST
-      #     r2: GND
-      #   params:
-      #     reverse: true
       
       reset-left:
         what: b3u1000p
@@ -378,3 +353,11 @@ pcbs:
           r1: RST
           r2: GND
           reverse: false
+
+      via-gnd:
+        what: via
+        where:
+          ref: finger-zone_inner_home
+          shift: [key_width + mcu_padding_width, -50.5]
+        params:
+          net: RAW
